# uniem

./: .gitignore  Makefile  README.md  demo.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  mtebzh_dataset.yml  mtebzh_model.yml
.github/workflows/: cd.yml  ci.yml
examples/: finetune.ipynb  finetune_hf_dataset.py  finetune_jsonl.py
examples/example_data/: riddle.jsonl
mteb-zh/: generate_report.py  models.py  readme.md  requirements.txt  run_mteb_zh.py  run_s2p.py  run_s2s.py  tasks.py
mteb-zh/mteb_zh/: models.py  tasks.py
scripts/: evalutate_metb.py  evalutate_mteb.py  process_zh_datasets.py  train_m3e.py  train_medi.py  train_t2ranking.py
tests/: __init__.py  conftest.py  test_data.py  test_data_structures.py  test_finetuner.py  test_loss.py  test_model.py  test_utils.py
tests/fixtures/: mini_medi.json
tests/fixtures/model/: config.json  tokenizer_config.json
uniem/: __init__.py  criteria.py  data.py  data_structures.py  finetuner.py  model.py  trainer.py  training_strategy.py  types.py  uniembedder.py  utils.py
uniem/integration/: sentence_transformers_wrapper.py
upload_datasets/: Clinical_Query_Data.csv
