[tool.poetry]
name = "uniem"
version = "0.1.0"
description = "unified embedding model"
authors = ["wangyuxin <wangyuxin@mokahr.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
transformers = "^4.28.1"
accelerate = "^0.19.0"
tqdm = "^4.65.0"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
blue = "^0.9.1"
ruff = "^0.0.265"
isort = "^5.12.0"

[tool.ruff]
line-length = 128

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
