[tool.poetry]
name = "uniem"
version = "0.3.0"
description = "unified embedding model"
authors = ["wangyuxin <wangyuxin@mokahr.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.28.0"
accelerate = "^0.19.0"
tqdm = "^4.65.0"
typer = {extras = ["all"], version = "^0.9.0"}
datasets = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
blue = "^0.9.1"
ruff = "^0.0.265"
isort = "^5.12.0"
pyright = "^1.1.314"

[tool.poetry.group.mteb.dependencies]
mteb = "^1.0.2"
openai = "^0.27.8"
sentence-transformers = "^2.2.2"
text2vec = "^1.2.1"

[tool.ruff]
line-length = 128
select = [
    'E',
    'F',
    'I',
    'N'
]
src = ['uniem', 'mteb-zh/mteb_zh', 'tests']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
